--- a/src/components/Delegation/DelegatesTableRow.css
+++ b/src/components/Delegation/DelegatesTableRow.css
@@ -9,10 +9,6 @@
 .DelegatesTableRow__Username span {
   width: 105px;
   text-align: left;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  margin-left: 2px;
 }
 
 .DelegatesTableRow__CandidateName {
